# Ai3-Orchestrator

./: .env.example  .gitignore  AI3CORE_README.md  ARCHITECTURE.md  CHANGELOG_v2.0.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  UPGRADE_SUMMARY.md  pyproject.toml  requirements.txt
ai3core/: __init__.py  engine.py  env.py  settings.py  types.py
ai3core/assembler/: __init__.py  assembler.py  strategies.py
ai3core/executor/: __init__.py  anthropic_adapter.py  base.py  executor_factory.py  openai_adapter.py  scheduler.py  xai_adapter.py
ai3core/journal/: __init__.py  artifact_store.py  run_journal.py  store.py
ai3core/planner/: __init__.py  llm_planner.py  planner.py
ai3core/providers/: __init__.py  anthropic.py  openai.py  xai.py
ai3core/registry/: __init__.py  capabilities.json  loader.py  registry.py
ai3core/router/: __init__.py  router.py  selector.py
ai3core/telemetry/: __init__.py  metrics.py
ai3core/verifier/: __init__.py  verifier.py  verify.py
api/: __init__.py  app.py
backend/: .env.example  api_clients.py  config.py  main.py  requirements.txt  task_analyzer.py  task_rules.json
docs/: AIOrchestratorDocs.tsx  AI_ROUTING_GUIDE.md
interface/: __init__.py
interface/cli/: __init__.py  main.py
tests/: __init__.py  test_ai3core.py  test_grok_integration.py  test_planner.py  test_scheduler.py  test_verifier_repair.py
vscode-extension/: package.json
vscode-extension/src/: extension.ts
